--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link rel="stylesheet" href="style/style.css">
+
+    <title>Marvel Dictionary</title>
 </head>
 <body>
     
 </body>
 </html>
 
-<h1>Harrison Morgan-Adams</h1>
+<img src="images/marvel-logo-header.jpg" alt="Marvel-logo" class="center">
+
+
